For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* don't recommend prawn-gmagick if PNG or JPG is corrupt or incomplete
* add helper method to determine when to recommend the prawn-gmagick gem

Bug Fixes::

* use prawn-gmagick, if available, to read raster image referenced by SVG (#2223)

== 2.0.6 (2022-05-30) - @mojavelinux

Bug Fixes::

* indent content of collapsible block and apply bottom margin to match style of HTML output (#2219)
* patch prawn-gmagick to reread bit depth of a PNG image if it extracts the wrong value (#2216)
* interpret width of SVG correctly when width is defined in file using px units (#2215)
* don't crash if inline role defines border width but not border color

=== Details

{url-repo}/releases/tag/v2.0.6[git tag] | {url-repo}/compare/v2.0.5\...v2.0.6[full diff]

== 2.0.5 (2022-05-26) - @mojavelinux

Bug Fixes::

* do not filter TOC entries without an ID when computing the TOC extent (#2210)
* fix width of multi-word phrase with background and border offset (#2059)

=== Details

{url-repo}/releases/tag/v2.0.5[git tag] | {url-repo}/compare/v2.0.4\...v2.0.5[full diff]

== 2.0.4 (2022-05-25) - @mojavelinux

Bug Fixes::

* fix calculation of TOC extent when TOC entry has children but no ID (#2208)

=== Details

{url-repo}/releases/tag/v2.0.4[git tag] | {url-repo}/compare/v2.0.3\...v2.0.4[full diff]

== 2.0.3 (2022-05-25) - @mojavelinux

Improvements::

* compute the optimize settings in init_pdf and store as Hash instead of after writing the PDF file

Bug Fixes::

* adjust TrimBox to fit inside of BleedBox when using optimizer and compliance is PDF/X (#2203)
* set height of resized image to available height to avoid float precision error when scaling down image to fit page (#2205)
* prevent content on title page from overrunning the bounds of a single page and warn; restriction applies to `ink_title_page`

=== Details
