@@ -20,6 +20,8 @@ module Asciidoctor
 
       attr_reader :cache_uri
 
+      attr_reader :jail_dir
+
       attr_accessor :font_color
 
       attr_accessor :font_scale
@@ -367,6 +369,7 @@ module Asciidoctor
         @fallback_fonts = Array theme.font_fallbacks
         @allow_uri_read = doc.attr? 'allow-uri-read'
         @cache_uri = doc.attr? 'cache-uri'
+        @jail_dir = doc.safe < ::Asciidoctor::SafeMode::SAFE ? nil : doc.base_dir
         @tmp_files = {}
         if (bg_image = resolve_background_image doc, theme, 'page-background-image')&.first
           @page_bg_image = { verso: bg_image, recto: bg_image }
@@ -936,7 +939,7 @@ module Asciidoctor
                           height: label_height,
                           fallback_font_name: fallback_svg_font_name,
                           enable_web_requests: allow_uri_read ? (method :load_open_uri).to_proc : false,
-                          enable_file_requests_with_root: (::File.dirname icon_path),
+                          enable_file_requests_with_root: { root: (::File.dirname icon_path), jail: @jail_dir },
                           cache_images: cache_uri
                         svg_obj.resize height: label_height if svg_obj.document.sizing.output_height > label_height
                         svg_obj.draw
@@ -1731,7 +1734,7 @@ module Asciidoctor
                 file_request_root = false
               else
                 svg_data = ::File.read image_path, mode: 'r:UTF-8'
-                file_request_root = ::File.dirname image_path
+                file_request_root = { root: (::File.dirname image_path), jail: @jail_dir }
               end
               svg_obj = ::Prawn::SVG::Interface.new svg_data, self,
                 position: alignment,
@@ -4046,7 +4049,7 @@ module Asciidoctor
       def resolve_image_options image_path, image_format, image_attrs, opts = {}
         if image_format == 'svg'
           image_opts = {
-            enable_file_requests_with_root: (::File.dirname image_path),
+            enable_file_requests_with_root: { root: (::File.dirname image_path), jail: @jail_dir },
             enable_web_requests: allow_uri_read ? (method :load_open_uri).to_proc : false,
             cache_images: cache_uri,
             fallback_font_name: fallback_svg_font_name,
